add step-2 updates
